--- a/src/scss/_books.scss
+++ b/src/scss/_books.scss
@@ -1,6 +1,7 @@
 .books-container {
     width: 100%;
     list-style: none;
+    margin-top: 1rem;
 
     &__item {
         @include space-between;
@@ -44,50 +45,5 @@
 
     &__delete {
         background-color: transparent;
-    }
-}
-
-.filter-options {
-    list-style: none;
-    background-color: $subtext-color;
-    width: 8rem;
-    border-radius: 1rem;
-    position: absolute;
-    transform: translateY(-20%);
-    opacity: 0;
-    pointer-events: none;
-    transition: transform 0.5s ease-in-out;
-
-    &__option {
-        padding: 1rem;
-        cursor: pointer;
-
-        &:hover {
-            background-color: rgba($accent-color, 0.4);
-        }
-    }
-
-    &__active {
-        transform: translateY(0%);
-        opacity: 1;
-        pointer-events: all;
-    }
-}
-
-.option-read {
-    border-bottom: 2px solid #eaeaea;
-    border-radius: 1rem 1rem 0 0;
-}
-
-.option-noread {
-    border-radius: 0 0 1rem 1rem;
-}
-
-.filter-arrow {
-    transition: transform 0.5s ease-in-out;
-    pointer-events: none;
-
-    &__active {
-        transform: translate(180deg);
     }
 }
