--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,8 +33,8 @@ body {
     display: none;
 }
 
-.html-display-delete {
-    display: none;
+.delete-button {
+    background-image: url(../img/delete.svg);
 }
 
 .main {
