--- a/src/scss/_books.scss
+++ b/src/scss/_books.scss
@@ -47,3 +47,9 @@
         background-color: transparent;
     }
 }
+
+.delete-button {
+    background-image: url(../img/delete.svg);
+    height: 24px;
+    width: 24px;
+}
